--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 os: linux
 language: cpp
 compiler: g++
-script: g++ -fPIC -shared js_ReaScriptAPI.cpp swell-modstub-generic.cpp -std=gnu++11 -Wall -m32 -o reaper_js_ReaScriptAPI324.so
+script: g++ -fPIC -shared js_ReaScriptAPI.cpp swell-modstub-generic.cpp -std=gnu++11 -Wall -o reaper_js_ReaScriptAPI324.so
