--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler: g++
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libgtk-3-dev ; fi
 #script: clang++ -fPIC -dynamiclib -undefined dynamic_lookup -DSWELL_PROVIDED_BY_APP -std=c++17 -stdlib=libc++ -lc++ -framework AppKit -framework Cocoa swell-modstub.mm js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp -o "reaper_js_ReaScriptAPI64.dylib"
-script: g++ -fPIC -shared -DSWELL_PROVIDED_BY_APP js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" -std=c++11 `pkg-config --cflags --libs gtk+-3.0` -Wall -o reaper_js_ReaScriptAPI64.so
+script: g++ -fPIC -shared -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" -std=c++11 `pkg-config --cflags --libs gtk+-3.0` -Wall -o reaper_js_ReaScriptAPI64.so
 deploy:
   provider: releases
   api_key: 
