--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler: g++
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libgtk-3-dev ; fi
 #osx command (remember the 32 or 64 in file name):
-script: clang++ -fPIC -dynamiclib -undefined dynamic_lookup -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -std=c++17 -framework AppKit -framework Cocoa "./WDL/swell/swell-modstub.mm" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI32.dylib"
+script: clang++ -fPIC -dynamiclib -undefined dynamic_lookup -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -std=c++17 -framework AppKit -framework Cocoa "./WDL/swell/swell-modstub.mm" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp -lc++ -stdlib=libc++ -m32 -o "reaper_js_ReaScriptAPI32.dylib"
 #script: clang++ -fPIC -dynamiclib -undefined dynamic_lookup -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -std=c++17 -framework AppKit -framework Cocoa "./WDL/swell/swell-modstub.mm" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
 #linux command:
 script: g++ -fPIC -shared -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" -std=c++11 `pkg-config --cflags --libs gtk+-3.0` -Wall -o reaper_js_ReaScriptAPI64.so
