--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 #os: osx
 os: linux
 language: cpp
-compiler: g++
+compiler: g++-5
+env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export CXX="g++-5"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libgtk-3-dev gcc-4.8-multilib g++-4.8-multilib; fi
