--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
-os: osx
-#os: linux
+#os: osx
+os: linux
 language: cpp
 compiler: g++-5
 #env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
 before_install:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export CXX="g++-5"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install g++5 libgtk-3-dev gcc-multilib g++-multilib; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export CXX="g++-5"; sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; sudo apt-get install g++5 libgtk-3-dev gcc-5-multilib g++-5-multilib; fi
+  #- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install g++5 libgtk-3-dev gcc-multilib g++-multilib; fi
 #osx command (remember the 32 or 64 in file name):
 #script: clang++ -fPIC -dynamiclib -undefined dynamic_lookup -DSWELL_PROVIDED_BY_APP -DLICE_PROVIDED_BY_APP -I"./WDL/swell/" -std=c++17 -framework AppKit -framework Cocoa "./WDL/swell/swell-modstub.mm" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp -lc++ -stdlib=libc++ -m32 -o "reaper_js_ReaScriptAPI32.dylib"
-script: clang++ -fPIC -dynamiclib -undefined dynamic_lookup -DSWELL_PROVIDED_BY_APP -DLICE_PROVIDED_BY_APP -I"./WDL/swell/" -std=c++17 -framework AppKit -framework Cocoa "./WDL/swell/swell-modstub.mm" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
+#script: clang++ -fPIC -dynamiclib -undefined dynamic_lookup -DSWELL_PROVIDED_BY_APP -DLICE_PROVIDED_BY_APP -I"./WDL/swell/" -std=c++17 -framework AppKit -framework Cocoa "./WDL/swell/swell-modstub.mm" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
 #linux command:
-#script: g++ -fPIC -shared -DSWELL_PROVIDED_BY_APP -DLICE_PROVIDED_BY_APP -I"./WDL/swell/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" -std=c++14 `pkg-config --cflags --libs gtk+-3.0` -Wall -o reaper_js_ReaScriptAPI64.so
+script: g++ -fPIC -shared -DSWELL_PROVIDED_BY_APP -DLICE_PROVIDED_BY_APP -I"./WDL/swell/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" -std=c++14 `pkg-config --cflags --libs gtk+-3.0` -Wall -o reaper_js_ReaScriptAPI64.so
 deploy:
   provider: releases
   api_key: 
