--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-#os: osx
-os: linux
+os: osx
+#os: linux
 language: cpp
 compiler: g++-5
 env: COMPILER_NAME=g++-5 CXX=g++-5 CC=gcc-5 CXX_FOR_BUILD=g++-5 CC_FOR_BUILD=gcc-5
@@ -7,7 +7,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export CXX="g++-5"; export CXX_FOR_BUILD="g++-5"; sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; sudo apt-get update -q; sudo apt-get install g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib; fi
   #- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install g++5 libgtk-3-dev gcc-multilib g++-multilib; fi
 #osx command (remember the 32 or 64 in file name):
-script: clang -c -m32 -fPIC -xc ./WDL/libpng/*.c ; clang -c -m32 -fPIC -xc ./WDL/zlib/*.c ; clang++ -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP  -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -m32 -o "reaper_js_ReaScriptAPI32.dylib"
+script: clang -c -m32 -fPIC -xc ./WDL/libpng/*.c ; clang -c -m32 -fPIC -xc ./WDL/zlib/*.c ; clang++ -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP  -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -m32 -o "reaper_js_ReaScriptAPI32.dylib"
 #script: clang -c -fPIC -xc ./WDL/libpng/*.c ; clang -c -fPIC -xc ./WDL/zlib/*.c ; clang++ -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" js_ReaScriptAPI_ObjC.mm js_ReaScriptAPI.cpp *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
 #linux command:
 #script: gcc-5 -c -fPIC -xc ./WDL/libpng/*.c ; gcc-5 -c -fPIC -xc ./WDL/zlib/*.c ; g++-5 -fPIC -shared -std=c++14 -Wall -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" js_ReaScriptAPI.cpp *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
