--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,7 +7,7 @@ only_commits:
 skip_commits:
   message: /\[travis\]/
 
-#artifacts:
+artifacts:
   - path: reaper_js_ReaScriptAPI64_ARM.dylib
       
 build_script:
