--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,11 @@
-# Do not build on tags (GitHub, Bitbucket, GitLab, Gitea)
+# Skip re-build caused by tagged release
 skip_tags: true
 
 only_commits:
   message: /\[appveyor\]/
 
-skip_commits:
-  message: /\[travis\]/
+#skip_commits:
+#  message: /\[travis\]/
 
 artifacts:
   - path: reaper_js_ReaScriptAPI64_ARM.dylib
@@ -14,7 +14,7 @@ build_script:
   - clang -c -std=c90 -arch=$ARCH -fPIC -xc ./WDL/libpng/*.c ; clang -c -arch=$ARCH -std=c90 -fPIC -xc ./WDL/jpeglib/*.c ; clang -c -arch=$ARCH -std=c90 -fPIC -xc ./WDL/zlib/*.c ; clang++ -arch=$ARCH -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
 
 deploy:
-  release: "{message}"
+  #release: "{message}"
   description: "Appveyor"
   provider: GitHub
   auth_token:
