--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,11 +7,21 @@ only_commits:
 #skip_commits:
 #  message: /\[travis\]/
 
+branches:
+  # whitelist
+  only:
+    - master
+    
+image: macOS
+
 artifacts:
   - path: reaper_js_ReaScriptAPI64_ARM.dylib
       
 build_script:
-  - clang -c -std=c90 -arch=$ARCH -fPIC -xc ./WDL/libpng/*.c ; clang -c -arch=$ARCH -std=c90 -fPIC -xc ./WDL/jpeglib/*.c ; clang -c -arch=$ARCH -std=c90 -fPIC -xc ./WDL/zlib/*.c ; clang++ -arch=$ARCH -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
+  - clang -c -arch x86_64 -arch arm64 -std=c90 -fPIC -xc ./WDL/libpng/*.c 
+  - clang -c -arch x86_64 -arch arm64 -std=c90 -fPIC -xc ./WDL/jpeglib/*.c 
+  - clang -c --arch x86_64 -arch arm64 std=c90 -arch=-fPIC -xc ./WDL/zlib/*.c 
+  - clang++ -arch x86_64 -arch arm64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
 
 deploy:
   #release: "{message}"
@@ -32,9 +42,9 @@ environment:
     #- job_name: macOS x86 64-bit
     #  appveyor_build_worker_image: macos-mojave
     #  ARCH: x86_64
-    - job_name: macOS ARM 64-bit
-      appveyor_build_worker_image: macos
-      ARCH: arm64
+    #- job_name: macOS ARM 64-bit
+    #  appveyor_build_worker_image: macos
+    #  ARCH: arm64
     #- job_name: Linux x86 64-bit
     #  appveyor_build_worker_image: *linux
     #  ARCH: x86_64
