--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,5 @@
+version: '1.220.{build}'
+
 # Skip re-build caused by tagged release
 skip_tags: true
 
@@ -11,16 +13,19 @@ branches:
   only:
     - master
     
-image: macos-bigsur
+image: 
+  - macos-bigsur
+  - macos
+  - ubuntu
 
 artifacts:
   - path: reaper_js_ReaScriptAPI64_ARM.dylib
       
 build_script:
-  - clang -c -arch arm64  -std=c90 -fPIC -xc ./WDL/libpng/*.c 
-  - clang -c -arch arm64  -std=c90 -fPIC -xc ./WDL/jpeglib/*.c 
-  - clang -c -arch arm64  -std=c90 -arch=-fPIC -xc ./WDL/zlib/*.c 
-  - clang++  -arch arm64  -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
+  #- clang -c -arch arm64  -std=c90 -fPIC -xc ./WDL/libpng/*.c 
+  #- clang -c -arch arm64  -std=c90 -fPIC -xc ./WDL/jpeglib/*.c 
+  #- clang -c -arch arm64  -std=c90 -arch=-fPIC -xc ./WDL/zlib/*.c 
+  #- clang++  -arch arm64  -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
 
 test_script:
   - file reaper_js_ReaScriptAPI64_ARM.dylib
@@ -32,12 +37,21 @@ deploy:
   provider: GitHub
   auth_token:
     secure: xak+nfVvqW+GAoOuBcLy2isGeQS/mPKtI1nnWsAL3Ajh163kUPIGw2qc8AdQtXV5
-  artifact: reaper_js_ReaScriptAPI64_ARM.dylib
   draft: false
   prerelease: false
   on:
     branch: master                 # release from master branch only
     #APPVEYOR_REPO_TAG: true        # deploy on tag push only
+  - on: 
+      image: ubuntu
+    artifact: reaper_js_ReaScriptAPI64.so
+  - on:
+      image: macos
+    artifact: reaper_js_ReaScriptAPI64.dylib
+  - on:
+      image: macos-bigsur
+    artifact: reaper_js_ReaScriptAPI64_ARM.dylib
+    
 
 
 #environment:
