--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,9 +48,9 @@ for:
       only:
         - job_name: macOS_64
     build_script:
-      - clang -c -arch x86_64 -std=c90 -fPIC -xc ./WDL/libpng/*.c 
-      - clang -c -arch x86_64 -std=c90 -fPIC -xc ./WDL/jpeglib/*.c 
-      - clang -c -arch x86_64 -std=c90 -arch=-fPIC -xc ./WDL/zlib/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c90 -xc ./WDL/libpng/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c90 -xc ./WDL/jpeglib/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c90 -xc ./WDL/zlib/*.c 
       - clang++  -arch x86_64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
@@ -59,9 +59,9 @@ for:
       only:
         - job_name: macOS_64_ARM
     build_script:
-      - clang -c -arch arm64 -std=c90 -fPIC -xc ./WDL/libpng/*.c 
-      - clang -c -arch arm64 -std=c90 -fPIC -xc ./WDL/jpeglib/*.c 
-      - clang -c -arch arm64 -std=c90 -arch=-fPIC -xc ./WDL/zlib/*.c 
+      - clang -c -arch arm64 -fPIC -std=c90 -xc ./WDL/libpng/*.c 
+      - clang -c -arch arm64 -fPIC -std=c90 -xc ./WDL/jpeglib/*.c 
+      - clang -c -arch arm64 -fPIC -std=c90 -xc ./WDL/zlib/*.c 
       - clang++  -arch arm64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64_ARM.dylib
