--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,14 +19,14 @@ artifacts:
 environment:
   matrix:
 
-  - job_name: macOS_64
-    appveyor_build_worker_image: macos
-
-  - job_name: macOS_64_ARM
-    appveyor_build_worker_image: macos-bigsur
-
   - job_name: linux_64
     appveyor_build_worker_image: ubuntu
+    
+  - job_name: macOS_64_
+    appveyor_build_worker_image: macos
+
+  - job_name: macOS_64_ARM_
+    appveyor_build_worker_image: macos-bigsur
 
 for:
   - matrix: 
@@ -34,9 +34,8 @@ for:
         - job_name: linux_64
     install:
       - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-      - sudo apt-get update -q
-      - sudo apt-get install g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
-      - fi
+      - sudo apt-get update -q -y
+      - sudo apt-get install -y g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
     build_script:
       - gcc-5 -c -fPIC -xc ./WDL/libpng/*.c
       - gcc-5 -c -fPIC -xc ./WDL/jpeglib/*.c
@@ -70,6 +69,13 @@ deploy:
   - provider: GitHub
     auth_token:
       secure: xak+nfVvqW+GAoOuBcLy2isGeQS/mPKtI1nnWsAL3Ajh163kUPIGw2qc8AdQtXV5
+    artifact: reaper_js_ReaScriptAPI64.so
+    on:
+      job_name: linux_64
+      
+  - provider: GitHub
+    auth_token:
+      secure: xak+nfVvqW+GAoOuBcLy2isGeQS/mPKtI1nnWsAL3Ajh163kUPIGw2qc8AdQtXV5
     artifact: reaper_js_ReaScriptAPI64.dylib
     on:
       job_name: macOS_64
@@ -80,10 +86,3 @@ deploy:
     artifact: reaper_js_ReaScriptAPI64_ARM.dylib
     on:
       job_name: macOS_64_ARM
-
-  - provider: GitHub
-    auth_token:
-      secure: xak+nfVvqW+GAoOuBcLy2isGeQS/mPKtI1nnWsAL3Ajh163kUPIGw2qc8AdQtXV5
-    artifact: reaper_js_ReaScriptAPI64.so
-    on:
-      job_name: linux_64
