--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,10 +37,10 @@ for:
       - sudo apt-get --quiet --yes update
       - sudo apt-get --quiet --yes install -y g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
     build_script:
-      - gcc-5 -c -fPIC -std=c++17 -xc ./WDL/libpng/*.c
-      - gcc-5 -c -fPIC -std=c++17 -xc ./WDL/jpeglib/*.c
-      - gcc-5 -c -fPIC -std=c++17 -xc ./WDL/zlib/*.c
-      - gcc-5 -c -fPIC -std=c++17 -xc ./kuba/*.c
+      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/libpng/*.c
+      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/jpeglib/*.c
+      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/zlib/*.c
+      - gcc-5 -c -fPIC -std=c17 -xc ./kuba/*.c
       - g++-5 -fPIC -shared -std=c++17 -Wall -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
 
 
@@ -48,10 +48,10 @@ for:
       only:
         - job_name: macOS_64
     build_script:
-      - clang -c -arch x86_64 -fPIC -std=c++17 -xc ./WDL/libpng/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c++17 -xc ./WDL/jpeglib/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c++17 -xc ./WDL/zlib/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c++17 -xc ./kuba/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/libpng/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./kuba/*.c 
       - clang++  -arch x86_64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
@@ -60,10 +60,10 @@ for:
       only:
         - job_name: macOS_64_ARM
     build_script:
-      - clang -c -arch arm64 -fPIC -std=c++17 -xc ./WDL/libpng/*.c 
-      - clang -c -arch arm64 -fPIC -std=c++17 -xc ./WDL/jpeglib/*.c 
-      - clang -c -arch arm64 -fPIC -std=c++17 -xc ./WDL/zlib/*.c 
-      - clang -c -arch arm64 -fPIC -std=c++17 -xc ./kuba/*.c 
+      - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/libpng/*.c 
+      - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
+      - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
+      - clang -c -arch arm64 -fPIC -std=c17 -xc ./kuba/*.c 
       - clang++  -arch arm64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64_ARM.dylib
